tests/parser/tests/cases/should_fail/issue_449/case.stderr
error: failed to parse
 --> $DIR/case.hash:2:2
1 |   // Should report that it unexpectedly encountered `=`
2 |   <=>a
  |    ^ here
  = note: unexpectedly encountered a `=`.
  = help: consider adding a `>`
